# SHAPETune

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  check_linearparm.ipynb  main.py  n1mpsi.csv  parse_data.ipynb  pixi.toml  pyproject.toml  requirements.txt
SHAPE/: parse_data.ipynb
analysis/archives/: analysis.ipynb
container/: shape-reg.yml
data/: U_L1.tsv  U_L10.tsv  U_L11.tsv  U_L12.tsv  U_L13.tsv  U_L14.tsv  U_L15.tsv  U_L16.tsv  U_L17.tsv  U_L18.tsv  U_L19.tsv  U_L2.tsv  U_L20.tsv  U_L21.tsv  U_L22.tsv  U_L23.tsv  U_L24.tsv  U_L25.tsv  U_L26.tsv  U_L27.tsv  U_L28.tsv  U_L29.tsv  U_L3.tsv  U_L30.tsv  U_L31.tsv  U_L32.tsv  U_L33.tsv  U_L34.tsv  U_L35.tsv  U_L36.tsv  U_L37.tsv  U_L38.tsv  U_L39.tsv  U_L4.tsv  U_L5.tsv  U_L6.tsv  U_L7.tsv  U_L8.tsv  U_L9.tsv  m1psi_dutta.par  (+82 more)
docs/plans/: README.md
docs/plans/optimization/: Black-Box.md  CMA-ES.md  LRA-CMA.md
notebooks/: gamma_potentials.ipynb  likelihood_test.ipynb  vs_turner.ipynb
parameters/: m1psi_dutta.json  m1psi_mauger.json
scripts/: parse_data.py  spartition_test.py  turner.py
shapetune/: __init__.py  __main__.py  _log_likelihood.py  _partition.py  _spartition.py  lbfgs_opt.py  prettier.py  vienna.py
shapetune/potentials/: steele.json
shapetune/tests/: test_partition.py
src/: __main__.py  lbfgs_opt.py  parse_data.py  prettier.py
tests/: test_lbfgs.py
